uploaded hw number 1

--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+    <head>
+        <title>Kate Lukacs</title>
+    </head>
     <body>
-        Homework 1
+        <h1>Kate Lukacs</h1>
+        <h2><em>Mechanical Engineering, MS</em></h2>
+        <p>I am mechanical engineer with an electrical engineering problem. I am 
+            currently working for a direct air capture company workinig to 
+            reverse climate change by lowering the concentration of carbon 
+            dioxide in the air. I get work at the intersection of hardware and
+            software, which I enjoy.
+        </p>
+        <p>There is so much more about me than school and work! I am an outdoor
+            enthusiast, who enjoys everything from running long distances in 
+            the mountains (like 100 miles!), kayaking off waterfalls, and eating
+            delicious food. I love travelling and learning new languages. I can't
+            wait to be done with school so I can spend more time being immersed 
+            in different cultures. Also, I have a chunko dog named Koda who is 
+            part malamute, husky, and pig. He has the lightest blue eyes you've 
+            ever seen and would steal a cookie from a baby.
+        </p>
+        <p>My favorite places to eat in Berkeley:
+            <ul>
+                <li>Tane Vegan Izakaya (Vegan Sushi!)</li>
+                <li>MoMo Masala's (Chili Paneer!)</li>
+                <li>LuLu's (brunch!)</li>
+            </ul>
+        </p>
+        <p>
+            <a href='https://fastestknowntime.com/athlete/kate-lukacs'>Kate's Crazy Unsupported Running Records</a>
+        </p>
+        
+        <img src='assets/img/KateKodaSelfie.jpg' 
+            width="232" 
+            height="309"
+        />
+        <h2><em>Reading Responses</em></h2>
+        <ol type=1>
+            <li>I learned that I should be thinking of design in everyday life.
+                For the past many years I have been engineering focused and have 
+                been looking around me to see examples of engineering work in the
+                world, much like that I should be looking at apps, websites, etc 
+                with a designers eye.
+            </li>
+            <li>
+                My favorite part of the article was deconstructing the apps.
+                Although it was almost like they were reconstructing them piece
+                by piece. It really helped me get their point about paying attention
+                to the small details and think through the 'why' behind their design.
+            </li>
+            <li>
+                My favorite quote is "Know the rules, so you can break em", basically
+                how can you not love this quote. I like to think I live my life by this
+                ethos. But it also makes a good point with design; if you analyze enough
+                apps in a design focused way (know the rules), eventually you will identify
+                ways to make the design even better and therefore be breaking the rules.
+            </li>
+            <li>
+                10 - I liked that it was a short read with interesting content 
+                I will take the main message away with me.
+            </li>
+        </ol>
     </body>
 </html>
