--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -1,6 +1,60 @@
-<!DOCTYPE html>
+<!doctype html\>
 <html>
-    <body>
-        Lab 1
-    </body>
+<header>
+    <!-- Placing an image inaa link -->
+    <a href='home'>
+        <img src='img/logo.png' alt=''>
+    </a>
+
+    <!-- Navigation bblock (links to other pages, for readabiility)-->
+    <nav>
+        <ul>
+            <li><a href='become-host'> Become a Host</a></li>
+            <li><a href='sign-up'> Sign up</a></li>
+            <li><a href='log-in'> Log in</a></li>
+        </ul>
+    </nav>
+</header>
+
+<head>
+    <title>
+        Lab 1 Kate Lukacs
+    </title>
+</head>
+
+<body>
+    <!-- Your content here! -->
+    <h1>Book unique places to stay and things to do.</h1>
+
+    <section>
+        <img src='img/house.png' />
+
+        <h2>Extraordinary homes</h2>
+
+        <p>
+            A selection of places to stay verified for quality and design.
+        </p>
+    </section>
+
+    <section>
+        <!-- Second section use city image-->
+        <img src='img/city.png' />
+
+        <h2>Places to stay around the world</h2>
+
+        <p>Explore a new city on your next trip!</p>
+    </section>
+
+    <section>
+        <!-- Third section use city image-->
+        <img src='img/sushimaking.png' />
+
+        <h2>Top-rated experiences</h2>
+
+        <p>Book one-of-a-kind activities hosted by locals, created for the curious.</p>
+    </section>
+
+</body>
+
+
 </html>
