--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<!-- PROBLEM 0:
+		Link the CSS stylesheet called style.css found in the assets/css folder -->
+		<link rel="stylesheet" type="text/css" href="assets/css/.initial.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic"><!-- Put your profile pic image here -->
+				<img src="assets/img/kate_koda_kodito.png" />
+			</div>
+			<div id="information">
+				<div id="username"><!-- Your name goes here! -->
+					Kate Lukacs</div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					<!-- Replace the lorem ipsum filler text and write your about me here! -->
+					I'm an outdoor adventure athlete who likes to code microcontrollers to bring hardware to life.
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><!-- A great image --> <img src="assets/img/moonBaja.jpg" /></div>
+				<div class="item"><!-- A great image --> <img src="assets/img/belize.jpg" /> </div>
+				<div class="item"><!-- A great image --> <img src="assets/img/lego.jpg" /></div>
+			</div>
+			<div class="row">
+				<div class="item"><!-- A great image --> <img src="assets/img/wser100.JPG" /></div>
+				<div class="item"><!-- A great image --> <img src="assets/img/dog_sand.jpg" /></div>
+				<div class="item"><!-- A great image --> <img src="assets/img/starryVan.jpg" /></div>
+			</div>
+			<div class="row">
+				<div class="item"><!-- A great image --> <img src="assets/img/grandcanyon.jpg" /> </div>
+				<div class="item"><!-- A great image --> <img src="assets/img/nica.JPG" /></div>
+				<div class="item"><!-- A great image --> <img src="assets/img/bajaVan.jpg" /> </div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
