--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,74 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        MIDTERM
+<!doctype html>
+<html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <title>top dog</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=New Tegomin">
+        <style>
+            body {
+                font-family: 'New Tegomin';font-size: 22px;color: #2b2118;
+            }
+        </style>
+    </head>
+
+    <body> 
+        <div class="navigation">
+            <div id="nav--name"> 
+                <div class="nav--button--home">
+                    top dog
+                </div>
+            </div>
+
+            <div id="nav--primary">
+                <div class="nav--button">
+                    <a href="index.html" id="home">home</a>
+                </div>
+                <div class="nav--button">
+                    <a href="menu.html" id="menu">menu</a>
+                </div>
+                <div class="nav--button">
+                    about
+                </div>  
+                <div class="nav--button">
+                    order now
+                </div>
+                <div class="nav--button">
+                    mail order
+                </div>
+                <div class="nav--button--catering">
+                    catering
+                </div>
+            </div>
+            
+            <div id="nav--secondary">
+                <div class="nav--button--merch">
+                    MERCHANDISE
+                </div>
+                <div class="nav--button">
+                    LOCATIONS
+                </div>  
+                <div class="nav--button">
+                    CONTACT US
+                </div>
+                <div class="nav--button">
+                    HOURS
+                </div>
+            </div>
+        </div>
+
+        <div id = "main">
+            <div class = "background--image">
+                <img src='assets/img/grilledDogs.png' />
+            </div>
+            <div class = "text">
+                world's best
+            </div>
+            <div class = 'text2'>
+                hot dogs
+            </div>
+        </div>
     </body>
 </html>
