final map functional

--- a/final/index.html
+++ b/final/index.html
@@ -1,6 +1,34 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        FINAL
+<!doctype html>
+<html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <title>BenKateKoda</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+
+
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=New Tegomin">
+        <style>
+            body {
+                font-family: 'New Tegomin';font-size: 22px;color: #2b2118;
+            }
+        </style>
+    </head>
+
+    <body> 
+        <div id='map' style='width: 800px; height: 600px;'></div>
+        <script>
+            mapboxgl.accessToken = 'pk.eyJ1Ijoia21sdWthY3MiLCJhIjoiY2xnZWl3aHN1MXRoczNpcGNlYnQybWw0OCJ9.UJaz7hIJvV9X9cE4uQECUg';
+            var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/kmlukacs/clgei7xkr000501muylpboeww'
+            });
+        </script>
+
+       
     </body>
 </html>
