--- a/final/index.html
+++ b/final/index.html
@@ -10,22 +10,33 @@
         <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
 
 
-        <link rel="stylesheet"
-              href="https://fonts.googleapis.com/css?family=New Tegomin">
-        <style>
-            body {
-                font-family: 'New Tegomin';font-size: 22px;color: #2b2118;
-            }
-        </style>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     </head>
 
     <body> 
-        <div id='map' style='width: 800px; height: 600px;'></div>
+        <div id='top-bar'>
+
+            <div class= 'name'>BEN KATE KODA</div>
+            <div class= 'slogan'>travelling through space and time</div>
+
+            
+            <div class = "top-right">
+                <a href="aboutus.html">about us</a>     
+            </div>
+        </div>
+
+        <div id='map' ></div>
         <script>
             mapboxgl.accessToken = 'pk.eyJ1Ijoia21sdWthY3MiLCJhIjoiY2xnZWl3aHN1MXRoczNpcGNlYnQybWw0OCJ9.UJaz7hIJvV9X9cE4uQECUg';
             var map = new mapboxgl.Map({
             container: 'map',
-            style: 'mapbox://styles/kmlukacs/clgei7xkr000501muylpboeww'
+            style: 'mapbox://styles/kmlukacs/clgs36ybn000v01pz6doebnob',
+                center: [-106.726824,17.496595],
+                zoom: 1.8
+    
             });
         </script>
 
