added interactive points and adaptive sizing

--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -9,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
+    
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body> 
@@ -17,7 +19,8 @@
             <div class= 'slogan'>travelling through space and time</div>
             
             <div class = "top-right">
-                    <a href="index.html">back</a>
+                    <a href="index.html" id="home">home</a>
+                    <a href="aboutus.html" id="aboutus">about us</a>
                 </div>
             </div>
 
