--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="height=device-height, initial-scale=1">
     </head>
 
     <body> 
