--- a/final/index.html
+++ b/final/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="height=device-height, initial-scale=1">
     </head>
 
     <body> 
@@ -38,7 +39,7 @@
             container: 'map',
             style: 'mapbox://styles/kmlukacs/clgsmvs8c001201pp4vboctfp',
                 center: [-94.510640,20.969352 ],
-                zoom: 1.8
+                zoom: 1.5
     
             });
             map.on('click', (event) => {
