finished final for real

--- a/final/aboutus.html
+++ b/final/aboutus.html
@@ -17,7 +17,7 @@
     <body> 
         <div id='top-bar'>
             <div class= 'name'>BEN KATE KODA</div>
-            <div class= 'slogan'>travelling through space and time</div>
+            <div class= 'slogan'>traveling through space and time</div>
             
             <div class = "top-right">
                     <a href="index.html" id="home">home</a>
