--- a/final/index.html
+++ b/final/index.html
@@ -21,7 +21,7 @@
         <div id='top-bar'>
 
             <div class= 'name'>BEN KATE KODA</div>
-            <div class= 'slogan'>travelling through space and time</div>
+            <div class= 'slogan'>traveling through space and time</div>
 
             
             <div class = "top-right">
